# PegaScale

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD
assets/: CMakeLists.txt
assets/exploit/: main.js  minmain_1.0.0-4.1.0.js  minmain_5.0.0-6.0.1.js  nvcore.js  package.json  sdbcore.js  sploitcore.js  utils.js
include/: ExploitScripts.h  IndexController.h  MinMainController.h  UserAgent.h
microdns/: CMakeLists.txt  microdns.c
src/: IndexController.cpp  MinMainController.cpp  UserAgent.cpp  main.cpp
views/: IndexView.csp
